--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,9 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "private": true,
   "proxy": "http://localhost:3001",
-  "engines": {
-    "node": "16.x"
-  },
+  "type": "module",
   "dependencies": {
     "@apollo/client": "^3.7.13",
     "@testing-library/jest-dom": "^4.2.4",
@@ -21,7 +20,7 @@
     "web-vitals": "^3.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
